Bug 181883 - kopete refuses to connect after the connection was lost
Summary: kopete refuses to connect after the connection was lost
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 183307 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-25 17:19 UTC by S. Burmeister
Modified: 2010-01-29 22:04 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2009-01-25 17:19:46 UTC
Version:            (using KDE 4.1.96)
OS:                Linux
Installed from:    SuSE RPMs

If one is connected to a jabber server and the connection is lost, e.g. your ISP disconnects you. Kopete will not react to this instantly, so while your router reconnects and internet is working again, kopete is still "using" the old connection.

If one goes offline before kopete times out, which is a matter of minutes, not seconds and then tries to get back online again, a grey pop-up at the bottom of the screen informs the user that connecting is not possible because of a network failure. I guess it tries to use some old connection or asks some service which is not up-to-date.

Internet works, yet kopete refuses to connect for some more minutes. Restarting does not help, only waiting. After something that causes this timed out/gets updated, one can connect again.
Comment 1 Marcus Better 2009-02-17 10:40:54 UTC
Confirmed with KDE 4.2.0 (Debian experimental) with Jabber. Reproducible every time after a suspend-resume cycle with long sleep time in between. There are multiple issues here:
1. Kopete does not notice that the connection was lost for several minutes after resume, and indicates connected status.
2. After it notices, there is a notification and the tray icon goes grey, but it does not try to reconnect.
Comment 2 mgleahy 2009-05-05 16:47:17 UTC
I've also confirmed what Marcus describes on KDE 4.2.2 (Feodra 10, x86_64).  Furthermore, my MSN account stays stuck at 'connecting' until I explicitly disconnect it then reconnect it.
Comment 3 Matt Rogers 2009-09-06 03:36:30 UTC
*** Bug 183307 has been marked as a duplicate of this bug. ***
Comment 4 Alexey Borisenkov 2009-09-06 12:12:06 UTC
*** This bug has been confirmed by popular vote. ***
Comment 5 Roman Jarosz 2009-11-01 13:24:49 UTC
SVN commit 1043393 by rjarosz:

Use Unknown error as default because InvalidHost suppress reconnecting.

CCBUG: 181883


 M  +1 -1      jabberaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1043393
Comment 6 Roman Jarosz 2009-11-01 14:28:05 UTC
SVN commit 1043415 by rjarosz:

Try to reconnect harder. 3 times with 10s interval and then after 1,3,5,7,9,11,13,15 minutes intervals.
If user changes the status to offline stop reconnection timer. 

BUG: 181883


 M  +20 -5     kopeteaccount.cpp  
 M  +1 -1      kopeteaccount.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1043415
Comment 7 Roman Jarosz 2010-01-03 13:48:42 UTC
*** Bug 209516 has been marked as a duplicate of this bug. ***
Comment 8 Andreas Pietzowski 2010-01-29 22:04:19 UTC
KDE 4.3.95. Jabber account still not reconnecting automatically. (copied from https://bugs.kde.org/show_bug.cgi?id=209516)