Try to reconnect harder. 3 times with 10s interval and then after 1,3,5,7,9,11,13,15 minutes intervals. If user changes the status to offline stop reconnection timer.

BUG: 181883

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1043415